I forgot to add trains button.

--- a/index.html
+++ b/index.html
@@ -13,7 +13,8 @@
     <ul>
       <li class="list"><a href="chapters/chapter1/index.html">Light Dark</a></li>
       <li class="list"><a href="chapters/chapter2/index.html">Selling</a></li>
-            <li class="list"><a href="chapters/chapter3/index.html">Parralax</a></li>
+      <li class="list"><a href="chapters/chapter3/index.html">Parralax</a></li>
+      <li class="list"><a href="chapters/chapter4/train.html">Trains</a></li>
     </ul>
     <div>
       <button class="btn">Dark</button>
