--- a/index.html
+++ b/index.html
@@ -11,10 +11,10 @@
     <h1>Task List</h1>
     <p id="msg">Current tasks:</p>
     <ul>
-      <li class="list"><a href="chapters/chapter1/index.html">Light Dark</a></li>
-      <li class="list"><a href="chapters/chapter2/index.html">Selling</a></li>
-      <li class="list"><a href="chapters/chapter3/index.html">Parralax</a></li>
-      <li class="list"><a href="chapters/chapter4/train.html">Trains</a></li>
+      <li class="list"><a href="chapters/chapter1/">Light Dark</a></li>
+      <li class="list"><a href="chapters/chapter2/">Selling</a></li>
+      <li class="list"><a href="chapters/chapter3/">Parralax</a></li>
+      <li class="list"><a href="chapters/chapter4/">Trains</a></li>
     </ul>
     <div>
       <button class="btn">Dark</button>
