--- a/index.html
+++ b/index.html
@@ -16,6 +16,7 @@
       <li class="list"><a href="chapters/chapter3/index.html">Parralax</a></li>
       <li class="list"><a href="chapters/chapter4/train.html">Trains</a></li>
       <li class="list"><a href="chapters/chapter5/index.html">Chapter Select</a></li>
+      <li class="list"><a href="chapters/chapter6/voice_recognition.html">Voice Recognition</a></li>
     </ul>
     <div>
       <button class="btn">Dark</button>
