--- a/index.html
+++ b/index.html
@@ -18,6 +18,7 @@
       <li class="list"><a href="chapters/chapter5/index.html">Chapter Select</a></li>
       <li class="list"><a href="chapters/chapter6/voice_recognition.html">Voice Recognition</a></li>
       <li class="list"><a href="chapters/chapter7/verlet_integration_for_jumping.html">Velocity Verlet</a></li>
+      <li class="list"><a href="chapters/chapter8/process_mp3s.html">MP3_Conversion</a></li>
     </ul>
     <div>
       <button class="btn">Dark</button>
